# rmatching

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
benchmarks/: .gitignore  minimal_cases.py  run_benchmark.py  run_minimal_benchmark.py  run_surface_dem_benchmark.py  surface_dem_cases.py  test_minimal_cases.py  test_run_minimal_benchmark.py  test_run_surface_dem_benchmark.py  test_surface_dem_cases.py
docs/plans/: 2026-02-28-rmatching-design.md  2026-02-28-rmatching-plan.md  2026-03-01-blossom-correctness-design.md  2026-03-01-blossom-correctness-plan.md  2026-03-04-benchmark-design.md  2026-03-04-benchmark-plan.md  2026-03-13-minimal-pymatching-microbench-design.md  2026-03-13-minimal-pymatching-microbench-plan.md  2026-03-13-surface-dem-benchmark-design.md  2026-03-13-surface-dem-benchmark-plan.md
src/: decoder.rs  lib.rs  test_alloc.rs  types.rs
src/driver/: decoding.rs  dem_parse.rs  mod.rs  user_graph.rs
src/flooder/: detector_node.rs  fill_region.rs  graph.rs  graph_flooder.rs  mod.rs
src/interop/: compressed_edge.rs  event.rs  flood_check_event.rs  mod.rs  queued_event_tracker.rs  region_edge.rs
src/matcher/: alt_tree.rs  mod.rs  mwpm.rs
src/search/: mod.rs  search_flooder.rs  search_graph.rs
src/util/: arena.rs  mod.rs  radix_heap.rs  varying.rs
tests/: coverage.rs  cross_validate.py  cross_validate.rs  debug_hang.rs  decode.rs  decoder.rs  dem_parse.rs  flooder.rs  graph_flooder.rs  integration.rs  interop.rs  matcher.rs  minimal_microbench.rs  pymatching_compat.rs  search.rs  user_graph.rs  util.rs
