[package]
name = "rmatching"
version = "0.1.0"
edition = "2024"

[workspace]

[features]
rsinter = ["dep:rsinter", "dep:rstim"]
bench = ["dep:rstim", "dep:rand"]

[dependencies]
rsinter = { git = "https://github.com/nzy1997/rstim.git", optional = true }
rstim = { git = "https://github.com/nzy1997/rstim.git", optional = true }
rand = { version = "0.8", optional = true }

[patch."https://github.com/nzy1997/rstim.git"]
rstim = { path = "../rstim" }
rsinter = { path = "../rsinter" }

[dev-dependencies]
